<resources>
    <string name="app_name">All Video Downloader</string>
    <string name="sintony" translatable="false">sintony-regular.otf</string>
    <string name="developer_email" translatable="false">infusiblecoder@gmail.com</string>
    <string name="privacy_message">"<b>We are committed to protecting your privacy</b> "</string>
    <string name="gallery_name">Gallery</string>
    <string name="fbAdmobAppId" translatable="false">2826467664143009</string>
    <string name="fbAdmobBanner" translatable="false">IMG_16_9_APP_INSTALL#236055237840153_245082356937441</string>
    <string name="fbAdmobInterstitial" translatable="false">IMG_16_9_APP_INSTALL#2826467664143009_2828393957283713</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="str_developed_with_love">Developed with ❤ in <b>Pakistan</b></string>
    <string name="info_permission_denied">Sorry permission denied. We can not open this app on your device, please try again later.</string>
    <string name="format_request_permision">%1$s will need to have read/write permission your sdcard to save Files.Do you want to grant it?</string>
    <string name="AdmobAppId" translatable="false">ca-app-pub-9243738527809292~4560010891</string>
    <string name="AdmobBanner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="AdmobInterstitial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="AdmobRewardID" translatable="false">ca-app-pub-9243738527809292/3217340101</string>
    <string name="SharingVideoSubject">Sharing Downloaded Video</string>
    <string name="SharingVideoTitle">Sharing Video</string>
    <string name="SharingVideoBody">Sharing Video File</string>
    <string name="SharingimageSubject">Sharing Downloaded Image</string>
    <string name="SharingimageTitle">Sharing Image</string>
    <string name="SharingimageBody">Sharing Image File</string>
    <string name="RateAppTitle">Like this app?</string>
    <string name="RateApp">Share the love by rating 5 stars in Play Store. 😘</string>
    <string name="how_to_download_videos">How to download videos?</string>
    <string name="share_the_video_to_aio_video_downloader_app_or">• Share the video to All Video Downloader app (or)</string>
    <string name="simply_copy_the_link_of_any_video">• Simply copy the link of any video</string>
    <string name="make_sure_auto_download_service_is_running">• Make sure \'Auto Download Service\' is running</string>
    <string name="paste_video_url_here">Paste Video URL here...</string>
    <string name="download">Download</string>
    <string name="options">Options</string>
    <string name="no_watermark">No Watermark</string>
    <string name="remove_watermark_from_downloaded_video">Remove watermark from downloaded video</string>
    <string name="auto_download">Auto Download</string>
    <string name="simply_copy_the_link_of_video_to_start_download">Simply copy the link of video to start download</string>
    <string name="currently_supports">Currently Supports</string>
    <string name="tiktok">TikTok</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">Youtube</string>
    <string name="dailymotion">Dailymotion</string>
    <string name="twitter">Twitter</string>
    <string name="viemo">" We collect the minimum amount of information about you that is commensurate with providing you with a satisfactory service. This policy indicates the type of processes that may result in data being collected about you. Your use of this website gives us the right to collect that information. "</string>
    <string name="message_title">Message Title</string>
    <string name="message_content">Message Content</string>
    <string name="auto_download_not_working">Auto Download not working?</string>
    <string name="make_sure_app_is_running_in_background">• Make sure app is running in the background</string>
    <string name="restart_the_app_if_that_doesn_t_work">• Restart the app if that doesn\'t work</string>
    <string name="contact_developer_before_leaving_a_negative_review">• Contact developer before leaving a negative review</string>
    <string name="author">Author</string>
    <string name="music_author">Music - Author</string>
    <string name="description_goes_here">Description Goes Here</string>
    <string name="starting_download">Starting download...</string>
    <string name="watch">WATCH</string>
    <string name="download_fragment">Download</string>
    <string name="gallery_fragment">Gallery</string>
    <string name="grant_option">Grant</string>
    <string name="permission_title">Permission Required!</string>
    <string name="cancel_option">Cancel</string>
    <string name="rate_dialog">RATE</string>
    <string name="later_btn">LATER</string>
    <string name="auto_download_title_notification">Auto Download Service</string>
    <string name="auto_download_title_notification_start">Copy the link of video to start download</string>
    <string name="stop_btn">Stop</string>
    <string name="restarted_service">Service restarted</string>
    <string name="downloading_des">Downloading</string>
    <string name="url_not_suppotr">This url not supported or no media found!</string>
    <string name="we_cant_allow">We cannot allow to download videos form this website.</string>
    <string name="genarating_download_link">Generating download link</string>
    <string name="somthing">Something went wrong!</string>
    <string name="delete_confirm">Selected video will be permanently deleted. This action cannot be undone. </string>
    <string name="delete_confirm_image">Selected Image will be permanently deleted. This action cannot be undone.</string>
    <string name="don_start">Downloading Start!</string>
    <string name="somth_video_wrong">\"Something went wrong while playing video! Please try again \"</string>
    <string name="went_shARRE">\"Something went wrong while sharing video! Please try again \"</string>
    <string name="error_occ">Error occurred!</string>
    <string name="install_fb">Install facebook app</string>
    <string name="install_tik">Install Tiktok app</string>
    <string name="install_ins">Install Instagaram app</string>
    <string name="enter_valid">Please Enter a valid URI</string>
    <string name="aio_auto">All Auto Download</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StatusSaver">Status Saver</string>
    <string name="video_downloader_gallery">Video Downloader Gallery</string>
    <string name="status_saver_gallery">Status Saver Gallery</string>
    <string name="appnotinstalled">WhatsApp Is Not Installed Kindly Install It</string>
    <string name="privacy">PRIVACY POLICY</string>
    <string name="language">Language</string>
    <string name="open_whatsapp">Open WhatsApp</string>
    <string name="privacytxt">Privacy</string>
    <string name="delete">Delete</string>
    <string name="note_for_android_10_or_above_gallery_will_not_work_so_you_can_find_the_downloaded_files_in_your_downloads_directory"><b><u>Note:</u></b> If your gallery is not showing LIKEE videos then access it from FileManager </string>
    <string name="select_quality">Select Quality</string>
    <string name="noApp_f">No application found to open this file.</string>
    <string name="file_del">File was Deleted</string>
    <string name="are_sure_del">Are you sure you want to delete this file?</string>
    <string name="del_tit">DELETE?</string>
    <string name="nn">No</string>
    <string name="yyy">Yes</string>
    <string name="vidd">\" video?\"</string>
    <string name="selected_i">\" Selected\"</string>
    <string name="choose">Choose</string>
    <string name="watch_arr">Watch</string>
    <string name="del_arr">Delete</string>
    <string name="share_arr">Share</string>
    <string name="saved_to">\"Saved to: \"</string>
    <string name="refre">Refreshed!</string>
    <string name="pernecessory">Permission necessary</string>
    <string name="write_neesory">Write Storage permission is necessary to Download Images and Videos!!!</string>
    <string name="yes">Yes</string>
    <string name="stor_saver">Download</string>
    <string name="se1">STEP 1</string>
    <string name="se_2">STEP 2</string>
    <string name="se_3">STEP 3</string>
    <string name="tap_wp">Tap to open WhatsApp.</string>
    <string name="vie_rec">View Recent Stories and Open Status Saver.</string>
    <string name="dow_sto">Download Stories you want!</string>
    <string name="invalid_url">Invalid Video URL or Check Internet Connection</string>
    <string name="savedstt">Download </string>
    <string name="install_ytd">Install Youtube app</string>
    <string name="install_twi">Install Twitter app</string>
    <string name="install_topbuzz">Install Topbuzz app</string>
    <string name="install_viemoo">Install Vimeo app</string>
    <string name="play_video_begin_des">Play video from begin when return to Home Screen</string>
    <string name="battery_saver">Battery saver</string>
    <string name="save_battery">Save battery</string>
    <string name="btn_rate">RATE</string>
    <string name="btn_share">SHARE</string>
    <string name="btn_settings">SETTINGS</string>
    <string name="big_title_splash">Become more popular and find \n hashtags!</string>
    <string name="small_title_spalsh">You will know how to be more popular, get more \n organic likes and followers from real people.</string>
    <string name="btn_star">START</string>
    <string name="show_mainwhatsapp">Main WhatsApp Statuses</string>
    <string name="rate_us">Rate Us</string>
    <string name="show_businesswhatsapp">Show Business Whatsapp</string>
    <string name="step_1">STEP 1:</string>
    <string name="firstly_you_need_to_choose_the_categorie_of_the_tags_that_you_need_to_use_in_your_instagrame_post_or_in_other_social_media">Firstly you need to choose the category of the tags that you need to use in your Instagram post or in other social media</string>
    <string name="step_2">STEP 2:</string>
    <string name="_1_then_you_can_choose_the_sub_categorie_that_you_need_to_use">1- Then you can choose the sub categories that you need to use</string>
    <string name="_2_after_that_copy_the_hashtags_by_click_on_copy_button_or_click_on_copy_38_open_instagram">2- After that copy the hashtags by click on the COPY button or click on COPY &amp; OPEN INSTAGRAM</string>
    <string name="_3_finaly_past_those_hashtags_on_your_post_and_wait_to_get_the_organic_likes_and_followers">3- Finally past those hashtags on your post and wait to get the organic likes and followers</string>
    <string name="live_video_wallpaper">Live Video Wallpaper</string>
    <string name="select_a_video_and_make_it_your_live_video_wallpaper">Select A Video And Make It Your Live Video Wallpaper</string>
    <string name="no_need_to_install_tiktok_app_open_tiktok_here">No Need To Install Tiktok App Open Tiktok Here</string>
    <string name="youtube_hashtag_genarator">YouTube Hashtag Generator</string>
    <string name="genarate_the_best_hashtags_for_youtube">Generate The Best Hashtags For Youtube</string>
    <string name="instagram_hashtags_likes_and_followers">Instagram Hashtags - likes and followers</string>
    <string name="tool_that_help_you_to_grow_your_profile_get_more_organic_likes_and_followers">The tool that helps you to grow your profile get more organic likes and followers</string>
    <string name="download_tiktok_video">Download Tiktok Video</string>
    <string name="earn_money_with_qureka_lite_n_play_quizzes_in_over_25_categories_n_prize_money_upto_rs_1_lac_daily">Earn money with Qureka Lite\n Play quizzes in over 25 categories.\n Prize money upto Rs. 1 Lac daily.</string>
    <string name="earn_money">Earn Money</string>
</resources>