<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:supportsRtl="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/ic_circle_white"
            android:padding="25dp"
            android:src="@drawable/ic_trending" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/big_title_splash"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/small_title_spalsh"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/btn_star"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
